--- a/euromilh/Properties/Resources.resx
+++ b/euromilh/Properties/Resources.resx
@@ -118,10 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="20641205_0vtlA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\20641205_0vtlA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="estrelinha" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\estrelinha.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="e9247a64cdb169bc61f1046f6e315bce_400x400" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\e9247a64cdb169bc61f1046f6e315bce_400x400.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="euromilhoes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\euromilhoes.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="e9247a64cdb169bc61f1046f6e315bce_400x400 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\e9247a64cdb169bc61f1046f6e315bce_400x400 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="20641205_0vtlA - Cópia" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\20641205_0vtlA - Cópia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
